# project-templates

./: .gitignore  README.md
python/container-modules/: Containerfile  build.py  example_config.json  new_module.sh  pyproject.toml
python/container-modules/src/runtime/: __init__.py  __main__.py  arguments.py  async_runner.py  modules_tabulate.py
python/container-modules/src/runtime/_shared/: __init__.py  logger.py
python/container-modules/src/runtime/modules/_base/: __init__.py
python/container-modules/src/runtime/modules/_shared/: __init__.py
python/container-modules/src/runtime/modules/_template/: __init__.py
python/container-modules/src/runtime/modules/template/: __init__.py  __main__.py
python/multi-threaded-api/: .dockerignore  Containerfile  README.md  architecture.drawio  build.py  nope.txt  pyproject.toml  requirements.txt  run.sh  run_project.sh  run_venv.sh
python/multi-threaded-api/assets/: example-asset.txt
python/multi-threaded-api/src/: __main__.py
python/multi-threaded-api/src/app/: __init__.py  arguments.py  config.py  constants.py
python/multi-threaded-api/src/httpapi/: __init__.py  config.py  helpers.py  routes.py
python/multi-threaded-api/src/httpapi/apiroutes/: __init__.py
python/multi-threaded-api/src/httpapi/apiroutes/handler/: __init__.py  tasks.py
python/multi-threaded-api/src/queue/: __init__.py
python/multi-threaded-api/src/static/: swagger-dark.css
python/multi-threaded-api/src/worker/: __init__.py
python/multi-threaded-api/src/worker_queue/: __init__.py
python/quickstart-container/: Containerfile  README.md  architecture.drawio  pyproject.toml  run.sh
python/quickstart-container/src/: __main__.py
python/quickstart-container/src/app/: __init__.py  arguments.py  config.py  constants.py
rust/: .gitignore
