[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-threaded-api"
version = "0.0.2"
description = "Multi-Threaded API Template"
authors = [{name = "bz0qyz", email="bz0qyz@github.com"}]
maintainers = []

requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}

license = "Unlicense"
license-files = ["LICENSE"]
keywords = ["api", "fastapi", "container", "template", "multi-threaded"]

dependencies = [
    "pydantic>=2.12.4",
    "Packaging>=25.0",
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0"
]

[project.urls]
home = "https://github.com/bz0qyz"
project = "https://github.com/bz0qyz/project-templates"
